[IMP] When voting admin chooses a day that the meeting is gonna be at from the votes, and the meeting moves in the calendar

--- a/calendar_voting/views/calendar_voting_view.xml
+++ b/calendar_voting/views/calendar_voting_view.xml
@@ -6,15 +6,16 @@
         <field name="inherit_id" ref="calendar.view_calendar_event_form"></field>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='recurrency']" position="after">
-                <field name="voting_checkbox" invisible="0"></field>
+                <field name="voting_checkbox" attrs="{'invisible': [('is_voting_admin', '=', False)]}"></field>
                 <field name="user_id" readonly="1" attrs="{'invisible': [('voting_checkbox', '=', False)]}" string="Voting admin"></field>
-                <field name="choose_day" attrs="{'invisible': [('voting_checkbox', '=', False)]}"></field>
-                <!-- <button name="choose_day_button" attrs="{'invisible': [('voting_checkbox', '=', False)]}" >Choose this day!</button> -->
-                <field name="choose_this_day" attrs="{'invisible': [('voting_checkbox', '=', False)]}"></field>
+                <!-- <field name="choose_day" attrs="{'invisible': ['|',('voting_checkbox', '=', False), ('is_voting_admin', '=', False)]}"></field> -->
+                <field name="choose_day_calendar" widget="date" attrs="{'invisible': ['|',('voting_checkbox', '=', False), ('is_voting_admin', '=', False)]}"></field>
+                <field name="choose_this_day" attrs="{'invisible': ['|',('voting_checkbox', '=', False), ('is_voting_admin', '=', False)]}"></field>
+                <field name="is_voting_admin" invisible="1"></field>
+                <field name="showtime" string="Voting time" attrs="{'invisible': [('voting_checkbox', '=', False)]}" readonly="1"></field>
             </xpath>
             <xpath expr="//page[@name='page_options']" position="inside">
                 <div attrs="{'invisible': [('voting_checkbox', '=', False)]}">
-                    <button name="action_sendmail" type="object" string="Send mail" icon="fa-envelope" class="oe_link"/>
                     <field name="participant_ids" mode="tree,kanban">
                         <tree string="Invitation details" editable="bottom" delete="false" create="false">
                             <field name="name"/>
