[IMP] tried to design the buttons after the wierframe for the jitsi module

--- a/communication_center_jitsi/static/src/css/controller_style.css
+++ b/communication_center_jitsi/static/src/css/controller_style.css
@@ -22,3 +22,13 @@
     pointer-events: all;
     margin: 15px;
 }
+
+
+/* *
+ * TODO:
+ * - Add class for on state on a  jitsi button
+ * - Add class for off state on a jitsi button
+ * - Fix icon classes
+ * - Change meeting_settings.js rendering functions to use these new classes
+ * */
+
