--- a/communication_center_jitsi/views/jitsi_controller.xml
+++ b/communication_center_jitsi/views/jitsi_controller.xml
@@ -3,7 +3,7 @@
     <template id="jitsi_meeting_site" name="placeholder_for_jitsi_meeting">
         <t t-call="website.layout">
             <div id="jitsi_meeting_placeholder"
-                t-att-data-jitsi="jitsi"
+                t-att-data-jitsi="jitsi" 
                 t-att-data-jwt="event.jwt_token"
                 t-att-data-room_subject="event.room_name"
                 t-att-data-lobby_with_knocking="event.lobby_with_let_in"
@@ -14,6 +14,16 @@
                 t-att-data-start_recording="event.start_recording"
                 t-att-data-no_recording="event.no_recording">
             </div>
+            <!-- <div class="btn_holder">
+                <a class="btn btn-primary jitsi_button">Klick me!</a>
+                <a class="btn btn-primary jitsi_button_lobby">Lobby!</a>
+                <<a class="btn btn-primary jitsi_button_rec">Rec!</a>
+                <a class="btn btn-primary jitsi_button_recoff">Rec off!</a> >
+                <a class="btn btn-primary jitsi_button">Click me!</a>
+                <a class="btn btn-danger jitsi_button_lobby">Lobby off!</a>
+                <a class="btn btn-primary jitsi_button_rec">Start Recording!</a>
+                <a class="btn btn-primary jitsi_button_recoff">Rec off!</a> 
+            </div> -->
         </t>
     </template>
 </odoo>
