--- a/communication_center_jitsi/static/src/css/controller_style.css
+++ b/communication_center_jitsi/static/src/css/controller_style.css
@@ -23,17 +23,39 @@
     margin: 15px;
 }
 
-.btn_on {
+.btn-on {
     background-color: white;
-    height: 50px;
     width: 50px;
+    height: 50px;
 }
 
-.btn_off {
-    background-color: gray;
-    height: 50px;
-    width: 50px;
+table {
+    margin-left: auto;
+    margin-right: auto;
 }
+
+.btn-off {
+    background-color: gray;
+    width: 50px;
+    height: 50px;
+}
+
+.btn-room-react {
+    background-color: white;
+    width: 50px;
+    height: 50px;
+}
+
+.btn-room-react:active {
+    background-color: gray;
+    width: 50px;
+    height: 50px;
+}
+
+.fa {
+    vertical-align: sub;
+}
+
 /* *
  * TODO:
  * - Add class for on state on a  jitsi button
