[IMP] Got the Javascript working and it creates a div

--- a/calendar_voting/static/src/css/controller_style.css
+++ b/calendar_voting/static/src/css/controller_style.css
@@ -1,4 +1,4 @@
-#test-style {
+/* #test-style {
     background-color: black;
     display: flex;
     height: 130%;
@@ -10,4 +10,4 @@ h1 {
     color: white;
     display: flex;
     justify-self: center;
-}
+} */
