[IMP] Created the div with meeting information, only the design (frontend) for the div

--- a/calendar_voting/views/controller_voting_view.xml
+++ b/calendar_voting/views/controller_voting_view.xml
@@ -2,8 +2,7 @@
 <odoo>
     <template id="calendar_voting_site" name="calendar_voting_site">
         <t t-call="website.layout">
-            <div id="test_style">
-                <h1>Hello! XD</h1>
+            <div id="controller_content" style="height: 100%">
             </div>
         </t>
     </template>
