--- a/calendar_voting/static/src/css/controller_style.css
+++ b/calendar_voting/static/src/css/controller_style.css
@@ -11,3 +11,18 @@ h1 {
     display: flex;
     justify-self: center;
 } */
+
+/* #info {
+    background-color: red;
+    height: 50%;
+    border: 5px;
+    border-color: white;
+    display: flex;
+    margin: 5px;
+    padding: 1px;
+    color: rgb(122, 122, 122);
+    justify-content: center;
+    text-size-adjust: 58px;
+    font-weight: bolder;
+    font-size: xx-large;
+} */
