--- a/calendar_voting/static/src/css/controller_style.css
+++ b/calendar_voting/static/src/css/controller_style.css
@@ -1,28 +1,73 @@
-/* #test-style {
-    background-color: black;
+#controller_content {
     display: flex;
-    height: 130%;
-    width: 20%;
-    margin: 1%;
 }
 
-h1 {
-    color: white;
+.meeting-info{
+    background-color: rgb(53, 53, 53);
+    margin: 1%;
+    padding: 1%;
+    width: 20%;
+}
+.meeting-name {
     display: flex;
-    justify-self: center;
-} */
-
-/* #info {
-    background-color: red;
-    height: 50%;
-    border: 5px;
-    border-color: white;
-    display: flex;
-    margin: 5px;
-    padding: 1px;
-    color: rgb(122, 122, 122);
     justify-content: center;
-    text-size-adjust: 58px;
+    color: white;
     font-weight: bolder;
-    font-size: xx-large;
-} */
+    font-size: x-large;
+    padding: 5%;
+}
+
+.meeting-div-title {
+    background-color: rgb(85, 85, 85);
+    padding: 1%;
+}
+
+.meeting-span{
+    color: white; 
+    font-size: larger; 
+    padding-left: 2%;
+}
+
+.meeting-div-info {
+    padding: 1%;
+}
+
+#participants-div {
+    padding: 1% 1% 1% 3%;
+}
+
+#participants-span {
+    color: white; 
+    font-size: larger;
+}
+
+#voting {
+    background-color: lightblue; 
+    width: 100%;
+    margin: 1%;
+    padding: 1%;
+    display: flex;
+    flex-direction: column;
+}
+
+.container-week {
+    background-color: darkgray;
+    height: 100%;
+    padding: 1%;
+    display: flex;
+}
+.cell-day {
+    border: solid black;
+    height: 50px;
+    margin: 0% 1%;
+    width: 14%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.vl {
+    height: 100%;
+    border: solid gray;
+    width: 0%;
+}
