--- a/calendar_voting/static/src/css/controller_style.css
+++ b/calendar_voting/static/src/css/controller_style.css
@@ -36,7 +36,7 @@
     padding: 1% 1% 1% 3%;
 }
 
-#participants-span {
+.participants-span {
     color: white; 
     font-size: larger;
 }
@@ -176,4 +176,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.btn:hover {
+    background-color: rgba(109, 108, 108, 0.377);
 }
