[IPM] The user can vote frome the controller and the results get sent to odoo

--- a/calendar_voting/static/src/css/controller_style.css
+++ b/calendar_voting/static/src/css/controller_style.css
@@ -156,6 +156,19 @@
     background-color: #d2d2ff;
 }
 
+.cell-voted {
+    height: 50px;
+    margin: 0% 1%;
+    width: 14%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #6d6d9e;
+    color: black;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
 .cell-voting {
     height: 50px;
     margin: 0% 1%;
